# reword

./: Cargo.toml  README.md
src/: cases.rs  join.rs  lib.rs  name.rs
tests/: cases.rs  join.rs  name.rs  names.rs
