[package]
name = "reword"
version = "7.0.1"
authors = ["evenorog <evenorog@gmail.com>"]
description = "Provides some utility functions for human-readable formatting of words."
documentation = "https://docs.rs/reword"
repository = "https://github.com/evenorog/reword"
readme = "README.md"
license = "MIT OR Apache-2.0"
categories = ["text-processing"]
edition = "2024"

[dependencies]
unicode-segmentation = "1"

[badges]
maintenance = { status = "actively-developed" }
